<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registro.RegistrarseActivity"
    android:background="#36454F">

    <ImageView
        android:id="@+id/ivBackground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/cvRegistrarse"
        />

    <androidx.cardview.widget.CardView
        android:id="@+id/cvRegistrarse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:cardCornerRadius="@dimen/cornerRadius_card"
        app:cardElevation="@dimen/card_elevation_login"
        android:layout_margin="@dimen/common_padding_default"
        android:backgroundTint="#36454F">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/common_padding_default"
            android:layout_margin="@dimen/common_padding_default">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilUsername"
                android:layout_width="@dimen/main_textfield_width"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/common_padding_default"
                android:hint="@string/hint_username"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/tilPassword"
                app:layout_constraintTop_toTopOf="parent"
                android:textColorHint="@color/black"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/black"
                    android:background="@drawable/border"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilPassword"
                android:layout_width="@dimen/main_textfield_width"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/common_padding_default"
                android:hint="@string/hint_password"
                android:textColorHint="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:passwordToggleEnabled = "true"
                app:passwordToggleTint="@color/black"
                app:layout_constraintTop_toBottomOf="@id/tilUsername"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textColor="@color/black"
                    android:background="@drawable/border"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilPassword2"
                android:layout_width="@dimen/main_textfield_width"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/common_padding_default"
                android:hint="@string/hint_password2"
                android:textColorHint="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:passwordToggleEnabled = "true"
                app:passwordToggleTint="@color/black"
                app:layout_constraintTop_toBottomOf="@id/tilPassword"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPassword2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textColor="@color/black"
                    android:background="@drawable/border"/>
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/tiPais"
                android:layout_width="@dimen/main_textfield_width"
                android:layout_height="@dimen/pais_dimen"
                android:layout_marginBottom="@dimen/common_padding_default"
                android:layout_marginTop="@dimen/common_padding_min"
                app:layout_constraintStart_toStartOf="@id/tilPassword2"
                app:layout_constraintTop_toBottomOf="@id/tilPassword2"
                android:background="@drawable/border"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tiemail"
                android:layout_width="@dimen/main_textfield_width"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/common_padding_default"
                android:hint="@string/hint_email"
                android:textColorHint="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:passwordToggleTint="@color/black"
                app:layout_constraintTop_toBottomOf="@id/tiPais"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etemail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:background="@drawable/border"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tiGenero"
                android:layout_width="@dimen/main_textfield_width"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/common_padding_default"
                android:hint="@string/hint_genero"
                android:textColorHint="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:passwordToggleTint="@color/black"
                app:layout_constraintTop_toBottomOf="@id/tiemail"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etgenero"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:background="@drawable/border"/>
            </com.google.android.material.textfield.TextInputLayout>



            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tiImg"
                android:layout_width="@dimen/main_textfield_width"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/common_padding_default"
                android:hint="@string/hint_img"
                android:textColorHint="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tiGenero"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etImg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:background="@drawable/border"/>
            </com.google.android.material.textfield.TextInputLayout>

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/ivImg"
                android:layout_width="30dp"
                android:layout_height="30dp"
                app:layout_constraintTop_toTopOf="@id/tiImg"
                app:layout_constraintBottom_toBottomOf="@id/tiImg"
                app:layout_constraintStart_toEndOf="@id/tiImg"
                android:layout_marginStart="@dimen/common_padding_min"
                android:src="@drawable/ic_account_circle_24" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btRegistrarse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Register_text"
                app:layout_constraintTop_toBottomOf="@id/tiImg"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_margin="@dimen/common_padding_default"
                android:backgroundTint="@color/yellow_d"
                android:textColor="@color/black"/>





        </androidx.constraintlayout.widget.ConstraintLayout>



    </androidx.cardview.widget.CardView>



</androidx.constraintlayout.widget.ConstraintLayout>