<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Usuario.UserFragment"
    android:clickable="true"
    android:focusable="true"
    android:background="@color/grey_oscuro">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_perfil"
            android:layout_width="125dp"
            android:layout_height="125dp"
            app:civ_border_color="@color/black_d"
            app:civ_border_width="2dp"
            android:layout_margin="@dimen/common_padding_default"
            android:src="@drawable/ic_account_circle_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hint_username"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:enabled="false"
            android:background="@android:color/transparent"
            android:layout_margin="@dimen/common_padding_default"
            app:layout_constraintStart_toEndOf="@id/iv_perfil"
            app:layout_constraintTop_toTopOf="@id/iv_perfil"
            app:layout_constraintBottom_toBottomOf="@id/iv_perfil" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:enabled="false"
            android:textSize="12sp"
            android:background="@android:color/transparent"
            android:layout_margin="@dimen/common_padding_default"
            app:layout_constraintStart_toEndOf="@id/iv_perfil"
            app:layout_constraintTop_toBottomOf="@id/et_username"
            app:layout_constraintBottom_toBottomOf="@id/iv_perfil" />

        <ImageButton
            android:id="@+id/btn_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:src="@drawable/delete_3_svgrepo_com"
            android:layout_margin="@dimen/common_padding_default"
            app:layout_constraintTop_toTopOf="@id/iv_perfil"
            app:layout_constraintBottom_toBottomOf="@id/iv_perfil"
            app:layout_constraintEnd_toEndOf="parent"
            app:tint="@color/white" />

        <ImageButton
            android:id="@+id/btn_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:src="@drawable/edit_3_svgrepo_com"
            android:layout_margin="@dimen/common_padding_default"
            app:layout_constraintTop_toTopOf="@id/iv_perfil"
            app:layout_constraintBottom_toBottomOf="@id/iv_perfil"
            app:layout_constraintEnd_toStartOf="@id/btn_delete"
            app:tint="@color/white" />

        <ImageButton
            android:id="@+id/btn_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:src="@drawable/confirm_svgrepo_com"
            android:visibility="gone"
            android:layout_margin="@dimen/common_padding_default"
            app:layout_constraintTop_toTopOf="@id/iv_perfil"
            app:layout_constraintEnd_toStartOf="@id/btn_cancel"
            app:tint="@color/white" />

        <ImageButton
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:src="@drawable/cancel_svgrepo_com"
            android:visibility="gone"
            android:layout_margin="@dimen/common_padding_default"
            app:layout_constraintTop_toTopOf="@id/iv_perfil"
            app:layout_constraintEnd_toEndOf="parent"
            app:tint="@color/white" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/btn_logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/common_padding_min"
            android:text="@string/cerrar_sesi_n"
            app:icon="@drawable/exit_svgrepo_com"
            app:iconTint="@color/white"
            android:textColor="@color/white"
            app:backgroundTint="@android:color/holo_red_light"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/btn_contrasena"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/common_padding_min"
            android:text="@string/cambiar_contrasena"
            app:icon="@drawable/key_minimalistic_2_svgrepo_com"
            app:iconTint="@color/white"
            android:textColor="@color/white"
            app:backgroundTint="@android:color/holo_green_light"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tv_librerias"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/librerias"
            android:textSize="@dimen/_18sp"
            android:textColor="@color/yellow"
            android:layout_margin="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_perfil" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_librerias"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/common_padding_default"
            app:layout_constraintTop_toBottomOf="@id/tv_librerias"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:listitem="@layout/item_account"/>

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/back_svgrepo_com"
            android:background="#00000000"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:backgroundTint="@color/white"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>
